cleaning up styling and visual look of the site

--- a/about.html
+++ b/about.html
@@ -32,33 +32,12 @@
   </header>
   <div class="about">
     <h1>About Me</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Expertise</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>3</td>
-          <td>Advanced</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>1</td>
-          <td>Beginner</td>
-        </tr>
-      </tbody>
-    </table>
+    Hi, I'm Maisha! I'm a budding full-stack developer and I enjoy being creative in whatever way I can. I enjoy cooking and trying new recipes, media and culture, cross-stiching and painting. I love to code because I love to solve puzzles. Let's work together and see what we can make!
+    <br>
+    <br>
     <a href="files/cv.pdf" class ="button" download>Download my CV</a>
+    <br>
+    <br>
     <br>
     <br>
     <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -664,9 +643,9 @@
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">
-      <img src="./img/github.svg" alt="Github">
-      <img src="./img/twitter.svg" alt="Twitter">
-      <img src="./img/linkedin.svg" alt="LinkedIn">
+      <a href="https://github.com/maishpie"><img src="./img/github.svg" alt="Github"></a>
+      <a href="#"><img src="./img/twitter.svg" alt="Twitter"></a>
+      <a href="#"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
     </div>
   </footer>
   <script src="js/tota11y.min.js"></script>
