--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
     <p>
       My name is Maisha Khan. I am a <span>web</span> developer based in Richmond, VA.
     </p>
-    <a href="#">Check out some of my code!</a>
+    <a href="./work.html">Check out some of my code!</a>
   </div>
+  <br>
   <div>
-    <a href="#">Default Link</a>
     <button type="button">Default Button</button>
+    <br>
     <button class="button__secondary">Secondary Button</button>
   </div>
+  <br><br>
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">
-      <img src="./img/github.svg" alt="Github">
-      <img src="./img/twitter.svg" alt="Twitter">
-      <img src="./img/linkedin.svg" alt="LinkedIn">
+      <a href="https://github.com/maishpie"><img src="./img/github.svg" alt="Github"></a>
+      <a href="#"><img src="./img/twitter.svg" alt="Twitter"></a>
+      <a href="#"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
     </div>
   </footer>
   <script src="js/tota11y.min.js"></script>
