--- a/work.html
+++ b/work.html
@@ -31,7 +31,9 @@
     </nav>
   </header>
   <section>
-    <h1>Work</h1>
+    <div class="work">
+      <h1>Work</h1>
+    </div>
     <div class="grid">
       <div class="grid__item">
         <h2>Mobile web app</h2>
@@ -80,9 +82,9 @@
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">
-      <img src="./img/github.svg" alt="Github">
-      <img src="./img/twitter.svg" alt="Twitter">
-      <img src="./img/linkedin.svg" alt="LinkedIn">
+      <a href="https://github.com/maishpie"><img src="./img/github.svg" alt="Github"></a>
+      <a href="#"><img src="./img/twitter.svg" alt="Twitter"></a>
+      <a href="#"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
     </div>
   </footer>
   <script src="js/tota11y.min.js"></script>
