--- a/contact.html
+++ b/contact.html
@@ -30,24 +30,38 @@
       </ul>
     </nav>
   </header>
-  <h1>Contact</h1>
-  <form action="" method="post" id="contact-form">
-    <label class="standard-label" for="contact-email">Email: </label>
-    <input type="email" id="contact-email" required>
+  <div class="contact">
+    <h1>Get in Touch</h1>
+  </div>
+  <br>
+  <div class="contactcontent">
+    <form action="" method="post" id="contact-form">
+      <label class="standard-label" for="contact-email">Email: </label>
+      <br>
+      <input type="email" id="contact-email" required>
 
-    <label class="standard-label" for="contact-tel">Telephone: </label>
-    <input type="tel" id="contact-tel">
+      <br><br>
 
-    <label class="standard-label" for="contact-message">Message: </label>
-    <textarea id="contact-message" maxlength="240" required></textarea>
-    <input type="submit" value="Send Message">
-  </form>
+      <label class="standard-label" for="contact-tel">Telephone: </label>
+      <br>
+      <input type="tel" id="contact-tel">
+
+      <br><br><br>
+
+      <label class="standard-label" for="contact-message">Message:   </label>
+      <br>
+      <textarea id="contact-message" maxlength="240" required></textarea>
+      <br><br>
+      <input class="button" type="submit" value="Send Message">
+      <br><br><br>
+    </form>
+  </div>
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">
-      <img src="./img/github.svg" alt="Github">
-      <img src="./img/twitter.svg" alt="Twitter">
-      <img src="./img/linkedin.svg" alt="LinkedIn">
+      <a href="https://github.com/maishpie"><img src="./img/github.svg" alt="Github"></a>
+      <a href="#"><img src="./img/twitter.svg" alt="Twitter"></a>
+      <a href="#"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
     </div>
   </footer>
   <script src="js/tota11y.min.js"></script>
