--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
   </div>
   <br>
   <div class="contactcontent">
-    <form action="" method="post" id="contact-form">
+    <form action="#" method="post" id="contact-form">
       <label class="standard-label" for="contact-email">Email: </label>
       <br>
       <input type="email" id="contact-email" required>
